@@ -1,5 +1,5 @@
-autoconf (>= 2.60)
-automake (>= 1.10)
+autoconf (>= 2.62)
+automake (>= 1.11)
 autopoint (>= 0.17)
 autotools-dev
 cdbs (>= 0.4.93)
@@ -11,13 +11,13 @@ dpkg-dev (>= 1.15.1)
 gstreamer@GST_ABI@-doc
 gstreamer@GST_ABI@-plugins-base
 gstreamer@GST_ABI@-plugins-base-doc
-gstreamer@GST_ABI@-tools (>= 0.11.90)
+gstreamer@GST_ABI@-tools (>= 0.11.91)
 gtk-doc-tools
 liba52-0.7.4-dev
 libcdio-dev (>= 0.76)
 libdvdread-dev (>= 0.9.0)
 libglib2.0-dev (>= 2.31.14)
-libgstreamer-plugins-base@GST_ABI@-dev (>= 0.11.90)
+libgstreamer-plugins-base@GST_ABI@-dev (>= 0.11.91)
 libmad0-dev (>= 0.15)
 libmp3lame-dev
 libmpeg2-4-dev (>= 0.4.0)
@@ -25,7 +25,7 @@ libopencore-amrnb-dev
 libopencore-amrwb-dev
 liborc-0.4-dev (>= 1:0.4.11)
 libsidplay1-dev
-libtool (>= 2.0)
+libtool (>= 2.2.6)
 libtwolame-dev (>= 0.3.10)
 libx264-dev (>= 0.55.0)
 pkg-config (>= 0.11.0)
