@@ -1,11 +1,11 @@
 @GST_LIB_DEV_DEP@
 @GST_EXTRA_BUILD_DEPENDS@
-libgstreamer-plugins-base@GST_ABI@-dev (>= 0.11.90)
+libgstreamer-plugins-base@GST_ABI@-dev (>= 0.11.91)
 autotools-dev
 dh-autoreconf
-automake (>= 1.10)
-autoconf (>= 2.60)
-libtool (>= 2.0)
+automake (>= 1.11)
+autoconf (>= 2.62)
+libtool (>= 2.2.6)
 autopoint (>= 0.17)
 cdbs (>= 0.4.93)
 debhelper (>= 8.1.3)
@@ -19,7 +19,7 @@ libmad0-dev (>= 0.15)
 libmpeg2-4-dev (>= 0.4.0)
 libsidplay1-dev
 libdvdread-dev (>= 0.9.0)
-gstreamer@GST_ABI@-tools (>= 0.11.90)
+gstreamer@GST_ABI@-tools (>= 0.11.91)
 gstreamer@GST_ABI@-plugins-base
 libcdio-dev (>= 0.76)
 libtwolame-dev (>= 0.3.10)
