@@ -4,25 +4,25 @@ Priority: optional
 Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.alioth.debian.org>
 Uploaders: Loic Minier <lool@dooz.org>,
            Sebastian Dröge <slomo@debian.org>
-Build-Depends: autoconf (>= 2.60),
-               automake (>= 1.10),
+Build-Depends: autoconf (>= 2.62),
+               automake (>= 1.11),
                autopoint (>= 0.17),
                autotools-dev,
                cdbs (>= 0.4.93),
                debhelper (>= 8.1.3),
                dh-autoreconf,
                dpkg-dev (>= 1.15.1),
-               libgstreamer1.0-dev (>= 0.11.90),
+               libgstreamer1.0-dev (>= 0.11.91),
                gstreamer1.0-doc,
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-base-doc,
-               gstreamer1.0-tools (>= 0.11.90),
+               gstreamer1.0-tools (>= 0.11.91),
                gtk-doc-tools,
                liba52-0.7.4-dev,
                libcdio-dev (>= 0.76),
                libdvdread-dev (>= 0.9.0),
                libglib2.0-dev (>= 2.31.14),
-               libgstreamer-plugins-base1.0-dev (>= 0.11.90),
+               libgstreamer-plugins-base1.0-dev (>= 0.11.91),
                libmad0-dev (>= 0.15),
                libmp3lame-dev,
                libmpeg2-4-dev (>= 0.4.0),
@@ -30,7 +30,7 @@ Build-Depends: autoconf (>= 2.60),
                libopencore-amrwb-dev,
                liborc-0.4-dev (>= 1:0.4.11),
                libsidplay1-dev,
-               libtool (>= 2.0),
+               libtool (>= 2.2.6),
                libtwolame-dev (>= 0.3.10),
                libx264-dev (>= 0.55.0),
                pkg-config (>= 0.11.0)
